--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sequelize": "^6.37.5",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
     "framer-motion": "^12.0.6",
-    "node": "^18.20.6",
+    "node": "^18.20.6"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.8",
