--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "framer-motion": "^12.0.6",
     "jsonwebtoken": "^9.0.2",
+    "node": "^18.20.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sequelize": "^6.37.5",
-    "tailwindcss": "^4.0.0",
-    "framer-motion": "^12.0.6",
-    "node": "^18.20.6"
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.8",
