--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": "^18.20.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "sequelize": "^6.37.5",
     "tailwindcss": "^4.0.0"
   },
