--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "teeoff",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "concurrently \"npm run server\" \"vite\"",
+    "server": "npx ts-node --transpile-only server/src/server.ts",
+    "build": "vite build && tsc",
     "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,8 @@
     "@types/express": "^5.0.0",
     "@types/sequelize": "^4.28.20",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "framer-motion": "^12.0.6",
     "jsonwebtoken": "^9.0.2",
@@ -32,13 +33,16 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "concurrently": "^8.2.1"
   }
 }
